[gd_scene load_steps=8 format=3 uid="uid://dy8xbo3w7naup"]

[ext_resource type="Script" uid="uid://dbl8usph4mm3t" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://e3nxait3kofa" path="res://mob.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bu6xbapgafpul" path="res://player.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://bhajq5ec28tyt" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://bdxt5mafiqcl4" path="res://art/house-in-a-forest-loop.ogg" id="5_7mycd"]
[ext_resource type="AudioStream" uid="uid://bwiwwxxr43snm" path="res://art/game-over.wav" id="6_272bh"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 7

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")
mob_scene = ExtResource("2_0xm2m")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2204, 0.37202, 0.38, 1)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0xm2m")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource("3_h2yge")]
position = Vector2(240, 440)
collision_layer = 1
collision_mask = 1

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 440)
gizmo_extents = 22.4

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7mycd")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_272bh")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
